# xjtlu-marks

./: xjtlu-marks-web.agent.md
GradeEstimate/: .gitignore  CHANGELOG_SUMMARY.md  README.md  analytics.py  app.py  deploy_tools.py  plot_visual.py  preflight_check.py  rank_estimate.py  release_tools.py  requirements.txt
GradeEstimate/pages/: Cloud_Checklist.py  Deployment_Error_Help.py  Release_Center.py
SimpleWinPlayer/: CMakeLists.txt
SimpleWinPlayer/plan/: plan.md
SimpleWinPlayer/src/Core/: VideoPlayer.cpp  VideoPlayer.h
SimpleWinPlayer/src/Render/: D3D11Renderer.cpp  D3D11Renderer.h
